default/objects/success__Message__c/success__Message__c.object-meta.xml
<CustomObject>
    <description>Messages are used to make changes to the Inspire Edition Channel display in near-real time. Channel definitions (i.e. styling, content, and polling), along with Audience Participation requests (via Chatter) and Interrupt Broadcasts (News &amp; Achievement Broadcasts) are all recorded as messages. The Inspire display Channel either receives the messages via the Streaming API, or fetches them using a polling mechanism and then implements the change instructions contained in the message.</description>
    <label>Message</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>