default/objects/success__Message__c/fields/success__Channel__c.field-meta.xml
<CustomField>
    <fullName>success__Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>