default/objects/success__Message__c/fields/success__Data__c.field-meta.xml
<CustomField>
    <fullName>success__Data__c</fullName>
    <label>Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>