default/objects/success__Message__c/fields/success__Destination__c.field-meta.xml
<CustomField>
    <fullName>success__Destination__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>