default/objects/success__Message__c/fields/success__Expires__c.field-meta.xml
<CustomField>
    <fullName>success__Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>