default/objects/success__Message__c/fields/success__Full_Data__c.field-meta.xml
<CustomField>
    <fullName>success__Full_Data__c</fullName>
    <label>Full Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>