default/objects/success__Message__c/fields/success__Is_complete__c.field-meta.xml
<CustomField>
    <fullName>success__Is_complete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is complete</label>
    <type>Checkbox</type>
</CustomField>