default/objects/success__Message__c/fields/success__Never_Expires__c.field-meta.xml
<CustomField>
    <fullName>success__Never_Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Expires</label>
    <type>Checkbox</type>
</CustomField>