default/objects/success__Message__c/fields/success__Topic__c.field-meta.xml
<CustomField>
    <fullName>success__Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>