default/objects/success__Message__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>